--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <h4 class="text-uppercase mb-4">Organizations</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="https://www.instagram.com/plan_usa/"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href=""https://www.instagram.com/plan_usa/""><i class="https://www.instagram.com/plan_usa/"></i></a>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of First Image</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Gender Gap </h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -216,7 +216,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage1.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> This image is an infographic that depicts the gender disparities within college costs and budgeting. The data shows how girls across the board are much more worried and focused on how they will pay for college when compared to their male counterparts. Additionally they estimate they will make less compared to what the boys estimate, and they significantly less likely to have had an allowance growing up. Overall, the statistics highlight the fact that girls are having much more forethought when it comes to higher education and the costs that come along with it. This could be attributed to the fact stereotypically female jobs pay significantly less than stereotypical male jobs. This would largely account for the disparity of concern between the genders. As this infographic and it's data points out, geneder roles and stereotypes don't simply just affect what field you will lean towards, and can actually also impact the finicial aspects of higher education. </p>
+                                    <p class="mb-4"> This image is an infographic that depicts the gender disparities within college costs and budgeting. The data shows how girls across the board are much more concerned with how they will pay for college when compared to their boy counterparts. Additionally, when asked to estimate their future salaries, girls guessed lower than the boys. Girls were also significantly less likely to have had an allowance growing up. Overall, the statistics highlight the fact that girls are having much more forethought when it comes to higher education and the costs that come along with it. This could be attributed to the fact stereotypically female jobs pay significantly less than stereotypical male jobs. This would largely account for the disparity of concern between the genders. As this infographic and it's data points out, geneder roles and stereotypes don't simply just affect what field you will lean towards, and can actually also impact the finicial aspects of higher education. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
