--- a/index.html
+++ b/index.html
@@ -179,14 +179,7 @@
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
-                <div class="row">
-                    <!-- Footer Social Icons-->
-                     <!-- Use this class to connect your project to potential organizations you found by adding in the href. If you do not add in an organization, delete the class-->
-                    <div class="col-lg mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Organizations</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href=""https://www.instagram.com/plan_usa/""><i 
+                <div class="row"
                     </div>
                 </div>
             </div>
@@ -214,7 +207,6 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="GenderGap.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"> This image is an infographic that depicts the gender disparities within college costs and budgeting. The data shows how girls across the board are much more concerned with how they will pay for college when compared to their boy counterparts. Additionally, when asked to estimate their future salaries, girls guessed lower than the boys. Girls were also significantly less likely to have had an allowance growing up. Overall, the statistics highlight the fact that girls have more forethought when it comes to higher education and its' costs. This can be attributed to the fact that stereotypically "feminine" jobs pay significantly less than stereotypical "masculine" jobs. This largely accounts for the disparity of concern between boys and girls. As this infographic and its data points out, geneder roles and stereotypes don't simply just affect what field you will lean towards, they actually also impact the financial aspects of higher education. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
