--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                     <!-- Portfolio Modal - Image-->
                                         <a class="btn btn-primary btn-lg" href="assets/documents/Gender Stereotyping and Affective Attit...e in Chinese Secondary School Students.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This study explores explicit and implicit gender-science stereotypes and affective attitudes towards science in a sample of Chinese secondary school students. </p>
+                                    <p class="mb-4">This study explores explicit and implicit gender-science stereotypes and affective attitudes towards science in a sample of Chinese secondary school students. Unsurprisingly, results that showed that both men and women believe science to be a "male domain," and humanities to be a "female domain." These stereotypes--although prevalent in as young as 7th grade--only progress as students make their way throughout secondary school. Such stereotypes in social infrastructures are a powerful--and destructive--mode of socialization that can alter our perceptions of our social identities. When students are told that their field of interest is one not "suited" for their particular gender identity, they oftentimes are forced to conform to hegemonic society. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
