--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screen Shot 2022-12-11 at 10.46.44 PM.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">In the article I used for my research, there was information provided about local support groups to help fight gender diversity. This is a common issue seen across the United States and we must fight it. Thus, these groups are created. This article particularly encounters youth gender diversity and ways of helping this crisis. Being in the 21st century has brough a lot of change to this area for the better and has shown a tremendous decrease of this diversity issue. This matters towrds the social development of our country. With resources like this, it can help to reduce gender stereotyping and those who are affected by it.</p>
+                                    <p class="mb-4">Gender disparity is a prevalent issue in American culture. Today, many groups exist to attempt to fight it and reinforce gender diversity. <em> Community support for sexual and gender diversity, minority stress, and mental health: A mixed method study of adolescents with minoritized sexual and gender identities </em> particularly encounters youth gender diversity and ways of helping this disparity, especially among minoritized groups. Being in the 21st century has brough a lot of change to this area for the better and has shown some decrease of this disparity issue through mental health resources and organizations such as Gay-Straight Alliances (GSAs). This matters towrds the social development of our country. With resources like these, we can help to reduce gender stereotyping and those who are affected by it.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -369,7 +369,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screen Shot 2022-12-09 at 3.40.51 PM.png" alt="..." />
                                     <a class="btn btn-primary btn-lg" href="https://www.stonewall.org.uk" target="_blank"> Click here to open link in new window</a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> <em> Stonewall </em> stands for "lesbian, gay, bi, trans, queer, questioning and ace (LQBTQ+) people everywhere." Stonewall represents a global movement supporting LQBTQ+ people everywhere and their allies.  .</p>
+                                    <p class="mb-4"> <em> Stonewall </em> stands for "lesbian, gay, bi, trans, queer, questioning and ace (LQBTQ+) people everywhere." Stonewall is a global movement supporting LQBTQ+ people everywhere and their allies, one that can help gender non-conforming individuals find support and community in a society that reinforces gender stereotypes harshly and consistently.  .</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
